# routes/index.js
@@ -1,8 +1,14 @@
 const routes = require('express').Router();
 const path = require('path');
 
-routes.use('/', require('./home'));
-routes.use('/api-docs', require('./swagger'));
+// routes.use('/', require('./home'));
+routes.use('/', require('./swagger'));
+
+// Temporary home page for testing
+routes.get('/', (req, res) => {
+   res.sendFile(path.join(__dirname + '../views/home.html'));
+});
+
 routes.use('/users', require('./users'));
 routes.use('/photos', require('./photos'));
 routes.use('/albums', require('./albums'));
